--- a/switchui/index.html
+++ b/switchui/index.html
@@ -18,15 +18,15 @@
   <main>
     <nav>
       <ul class="boxes">
-        <li><a class="box" href="#" onclick="alert('Textures not provided / terminating startup!');">
+        <li><a class="box" href="/botw.html">
           <span class="title">The Legend of Zelda: Breath of the Wild</span>
           <span class="image" style="background-image: url(icons/botw.jpg); background-color:#E60012; background-size: cover;"></span>
         </a></li>
-        <li><a class="box" href="#" onclick="alert('Available through PRO version only');">
+        <li><a class="box" href="/eshop.html">
           <span class="title">Nintendo eShop</span>
           <span class="image" style="background-image: url(icons/eshop.jpg); background-color:#E60012; background-size: cover;"></span>
         </a></li>
-		        <li><a class="box" href="#" onclick="alert('Content Unnavailable');">
+		        <li><a class="box" href="#" onclick="alert('An unexpected error ocurred');">
           <span class="title">Nintendo</span>
           <span class="image" style="background-image: url(icons/nintendo.svg); background-color:#E60012;"></span>
         </a></li>
