--- a/switchui/botw.html
+++ b/switchui/botw.html
@@ -6,10 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Error Launching Title</title>
   <link rel="stylesheet" href="styles.css" media="screen" title="no title">
+  <script>
+    alert("An error ocurred while launching");
+    window.location.href = "/";
+  </script>
 </head>
 </head>
 <body>
-<h1>No shader cache found / terminating launch</h1>
+<h1>Oops</h1>
 <br />
 <small><a href="index.html">Back</a><small>
 </body>
