--- a/switchui/index.html
+++ b/switchui/index.html
@@ -18,11 +18,11 @@
   <main>
     <nav>
       <ul class="boxes">
-        <li><a class="box" href="/botw.html">
+        <li><a class="box" href="/switchui/botw.html">
           <span class="title">The Legend of Zelda: Breath of the Wild</span>
           <span class="image" style="background-image: url(icons/botw.jpg); background-color:#E60012; background-size: cover;"></span>
         </a></li>
-        <li><a class="box" href="/eshop.html">
+        <li><a class="box" href="/switchui/eshop.html">
           <span class="title">Nintendo eShop</span>
           <span class="image" style="background-image: url(icons/eshop.jpg); background-color:#E60012; background-size: cover;"></span>
         </a></li>
