--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="styles.css" media="screen" title="no title">
 </head>
 </head>
-<body>
+<body style="margin:0px;">
 <div>
-<img style="background-size:cover;" src="icons/eshop_load.gif"></img>
+<img style="width:100%;height:100%;" src="icons/eshop_load.gif"></img>
 <div>
 <br />
 </body>
