--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -9,7 +9,7 @@
 </head>
 </head>
 <body style="margin:0px;">
-<div>
+<div style="width:100%;height:100%;">
 <img style="width:100%;height:100%;" src="icons/eshop_load.gif"></img>
 <div>
 <br />
