--- a/switchui/index.html
+++ b/switchui/index.html
@@ -6,8 +6,38 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Nintendo Switch Emulator</title>
   <link rel="stylesheet" href="styles.css" media="screen" title="no title">
+	<script>
+		function err(){
+			alert("Error 0xff88d6");
+		}
+	</script>
 </head>
-<body style="margin:0px;">
-	<iframe style="width:100%;height:100%;" src="/switchui/home.html></iframe>
+<body>
+<div class="wrapper">
+  <header>
+    <span class="user">
+      <img src="https://image.freepik.com/free-icon/question-mark_318-52837.jpg" alt="Account" />
+    </span>
+    <h1>Nintendo Switch Emulator</h1>
+  </header>
+  <main>
+    <nav>
+      <ul class="boxes">
+        <li><a class="box" href="#" onclick="err();">
+          <span class="title">The Legend of Zelda: Breath of the Wild</span>
+          <span class="image" style="background-image: url(icons/botw.jpg); background-color:#E60012; background-size: cover;"></span>
+        </a></li>
+        <li><a class="box" href="#" onclick="err();">
+          <span class="title">Nintendo eShop</span>
+          <span class="image" style="background-image: url(icons/eshop.jpg); background-color:#E60012; background-size: cover;"></span>
+        </a></li>
+	<li><a class="box" href="#" onclick="err();">
+          <span class="title">Nintendo</span>
+          <span class="image" style="background-image: url(icons/nintendo.svg); background-color:#E60012;"></span>
+        </a></li>
+      </ul>
+    </nav>
+  </main>
+</div>
 </body>
 </html>
