--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css" media="screen" title="no title">
 </head>
 </head>
-<body style="margin:0px;">
-<img style="width:100%;height:100%;" src="icons/eshop_load.gif"></img>
+<body style="background-image:url(icons/eshop_load.gif);">
+<!--<img style="width:100%;height:100%;" src="icons/eshop_load.gif"></img>-->
 </body>
 </html>
