--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -6,9 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Nintendo eShop</title>
   <link rel="stylesheet" href="styles.css" media="screen" title="no title">
+  <style>
+    body {
+      background-image:url(icons/eshop_load.gif);
+      height: 100%; 
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  </style>
 </head>
 </head>
-<body style="background-image:url(icons/eshop_load.gif);">
+<body>
 <!--<img style="width:100%;height:100%;" src="icons/eshop_load.gif"></img>-->
+  <center>
+    <h1 style="margin:auto;"><pre>Contacting Nintendo eShop...</pre></h1>
+  </center>
 </body>
 </html>
