--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -8,19 +8,17 @@
   <link rel="stylesheet" href="styles.css" media="screen" title="no title">
   <style>
     body {
-      background-image:url(icons/eshop_load.gif);
+      background-image: url("icons/eshop_load.gif");
       height: 100%; 
-      background-position: center;
+      /*background-position: center;
       background-repeat: no-repeat;
-      background-size: cover;
+      background-size: cover;*/
     }
   </style>
 </head>
 </head>
 <body>
 <!--<img style="width:100%;height:100%;" src="icons/eshop_load.gif"></img>-->
-  <center>
-    <h1 style="margin:auto;"><pre>Contacting Nintendo eShop...</pre></h1>
-  </center>
+<h1 style="margin:auto;"><pre>Contacting Nintendo eShop...</pre></h1>
 </body>
 </html>
