--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -10,9 +10,9 @@
     body {
       background-image: url("icons/eshop_load.gif");
       height: 100%; 
-      /*background-position: center;
+      background-position: center;
       background-repeat: no-repeat;
-      background-size: cover;*/
+      background-size: cover;
     }
   </style>
 </head>
