--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -9,7 +9,8 @@
   <style>
     body {
       background-image: url("icons/eshop_load.gif");
-      height: 100%; 
+      height: 100%;
+      width: 100%;
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
