--- a/switchui/index.html
+++ b/switchui/index.html
@@ -6,12 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Nintendo Switch Emulator</title>
   <link rel="stylesheet" href="styles.css" media="screen" title="no title">
-	<script>
-		function err(){
-			alert("Error 0xff88d6");
-			close();
-		}
-	</script>
+   <script>
+   	function err(){
+   		alert("Error 0xff88d6");
+   		close();
+   	}
+   </script>
+   <script>
+     resizeTo(1002,533);
+   </script>
 </head>
 <body>
 <div class="wrapper">
