--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -9,10 +9,10 @@
   <style>
     body {
       background-image: url("icons/eshop_load.gif");
-      height: 100%;
-      width: 100%;
-      background-position: center;
       background-repeat: no-repeat;
+      /*height: 100%;
+      width: 100%;
+      background-position: center;*/
       background-size: cover;
     }
   </style>
