--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -12,8 +12,8 @@
       background-repeat: no-repeat;
       /*height: 100%;
       width: 100%;
-      background-position: center;*/
-      background-size: cover;
+      background-position: center;
+      background-size: cover;*/
     }
   </style>
   <script>
