--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -10,9 +10,9 @@
     body {
       background-image: url("icons/eshop_load.gif");
       background-repeat: no-repeat;
-      /*height: 100%;
-      width: 100%;
-      background-position: center;
+      height: 270px;
+      width: 480px;
+      /*background-position: center;
       background-size: cover;*/
     }
   </style>
