--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -19,7 +19,7 @@
   <script>
     resizeTo(480,270);
     setTimeout(() => {
-      document.getElementById("e").innerHTML = "<pre>Error: Socket closed with status 403 Access Denied</pre>";
+      document.getElementById("e").innerHTML = "<pre>Error: Socket closed with<br>status 403 Access Denied</pre>";
     }, 5000);
   </script>
 </head>
