--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -14,13 +14,10 @@
       width: 480px;
     }
   </style>
-  <script>
-    resizeTo(480,270);
-  </script>
 </head>
 </head>
-<body>
+<body onload="resizeTo(480,270);">
 <!--<img style="width:100%;height:100%;" src="icons/eshop_load.gif"></img>-->
-<h1 style="margin:auto;"><pre>Contacting Nintendo eShop...</pre></h1>
+<h5 style="margin:auto;"><pre>Contacting Nintendo eShop...</pre></h1>
 </body>
 </html>
