--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -13,11 +13,14 @@
       height: 270px;
       width: 480px;
     }
+    .eh {
+      margin: auto;
+    }
   </style>
 </head>
 </head>
 <body onload="resizeTo(480,270);">
 <!--<img style="width:100%;height:100%;" src="icons/eshop_load.gif"></img>-->
-<h5 style="margin:auto;"><pre>Contacting Nintendo eShop...</pre></h1>
+<h5 class="eh"><pre>Contacting Nintendo eShop...</pre></h1>
 </body>
 </html>
