--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -17,9 +17,13 @@
       margin: auto;
     }
   </style>
+  <script>
+    alert("HTTP 403 Access Denied");
+    close();
+  </script>
 </head>
 </head>
-<body onload="resizeTo(480,270);">
+<body onload="resizeTo(500,290);">
 <!--<img style="width:100%;height:100%;" src="icons/eshop_load.gif"></img>-->
 <h5 class="eh"><pre>Contacting Nintendo eShop...</pre></h1>
 </body>
