--- a/switchui/eshop.html
+++ b/switchui/eshop.html
@@ -18,13 +18,15 @@
     }
   </style>
   <script>
-    alert("HTTP 403 Access Denied");
-    close();
+    function err(){
+      alert("HTTP 403 Access Denied");
+      close();
+    }
   </script>
 </head>
 </head>
 <body onload="resizeTo(500,290);">
 <!--<img style="width:100%;height:100%;" src="icons/eshop_load.gif"></img>-->
-<h5 class="eh"><pre>Contacting Nintendo eShop...</pre></h1>
+<h5 class="eh"><pre onload="err()">Contacting Nintendo eShop...</pre></h1>
 </body>
 </html>
